@@ -1,28 +1,75 @@
 # Ones that have their own macros.
-dirent.h	AC_HEADER_DIRENT
-sys/ndir.h	AC_HEADER_DIRENT
-sys/dir.h	AC_HEADER_DIRENT
-ndir.h		AC_HEADER_DIRENT
-sys/mkdev.h	AC_HEADER_MAJOR
-string.h	AC_HEADER_STDC
-stdlib.h	AC_HEADER_STDC
-stddef.h	AC_HEADER_STDC
-stdarg.h	AC_HEADER_STDC
-float.h		AC_HEADER_STDC
-sys/wait.h	AC_HEADER_SYS_WAIT
 X11/Xlib.h	AC_PATH_X
+dirent.h	AC_HEADER_DIRENT
+float.h		AC_HEADER_STDC
+ndir.h		AC_HEADER_DIRENT
+stdarg.h	AC_HEADER_STDC
+stddef.h	AC_HEADER_STDC
+stdlib.h	AC_HEADER_STDC
+string.h	AC_HEADER_STDC
+sys/dir.h	AC_HEADER_DIRENT
+sys/mkdev.h	AC_HEADER_MAJOR
+sys/ndir.h	AC_HEADER_DIRENT
+sys/wait.h	AC_HEADER_SYS_WAIT
 
-# Others.
-fcntl.h		AC_CHECK_HEADERS
-limits.h	AC_CHECK_HEADERS
-malloc.h	AC_CHECK_HEADERS
-paths.h		AC_CHECK_HEADERS
-sgtty.h		AC_CHECK_HEADERS
-strings.h	AC_CHECK_HEADERS
-sys/file.h	AC_CHECK_HEADERS
-sys/ioctl.h	AC_CHECK_HEADERS
-sys/time.h	AC_CHECK_HEADERS
-sys/window.h	AC_CHECK_HEADERS
-syslog.h	AC_CHECK_HEADERS
-termio.h	AC_CHECK_HEADERS
-unistd.h	AC_CHECK_HEADERS
+# Others, to checked with AC_CHECK_HEADERS.
+OS.h
+alloca.h
+argz.h
+arpa/inet.h
+errno.h
+fcntl.h
+fenv.h
+float.h
+fs_info.h
+inttypes.h
+langinfo.h
+libintl.h
+limits.h
+locale.h
+mach/mach.h
+malloc.h
+memory.h
+mntent.h
+mnttab.h
+netdb.h
+netinet/in.h
+nl_types.h
+nlist.h
+paths.h
+sgtty.h
+shadow.h
+stddef.h
+stdio_ext.h
+stdlib.h
+string.h
+strings.h
+sys/acl.h
+sys/file.h
+sys/filsys.h
+sys/fs/s5param.h
+sys/fs_types.h
+sys/fstyp.h
+sys/ioctl.h
+sys/mntent.h
+sys/mount.h
+sys/param.h
+sys/socket.h
+sys/statfs.h
+sys/statvfs.h
+sys/systeminfo.h
+sys/time.h
+sys/timeb.h
+sys/vfs.h
+sys/wait.h
+sys/window.h
+syslog.h
+termio.h
+termios.h
+unistd.h
+utime.h
+utmp.h
+utmpx.h
+values.h
+wchar.h
+wctype.h
